@@ -180,7 +180,6 @@ META
 /stdlib/target_camlheader
 /stdlib/camlheader[di]
 /stdlib/target_camlheader[di]
-/stdlib/camlheader_ur
 /stdlib/labelled-*
 /stdlib/caml
 /stdlib/sys.ml
