@@ -40,7 +40,7 @@ NOSTDLIB= camlinternalFormatBasics.cmo stdlib.cmo
 OTHERS=$(filter-out $(NOSTDLIB),$(OBJS))
 
 .PHONY: all
-all: stdlib.cma std_exit.cmo camlheader target_camlheader camlheader_ur
+all: stdlib.cma std_exit.cmo camlheader target_camlheader
 
 ifeq "$(RUNTIMED)" "true"
 all: camlheaderd target_camlheaderd
@@ -69,8 +69,7 @@ INSTALL_STDLIB_META_DIR=$(DESTDIR)$(LIBDIR)/stdlib
 
 install::
 	$(INSTALL_DATA) \
-	  stdlib.cma std_exit.cmo *.cmi camlheader_ur \
-	  "$(INSTALL_LIBDIR)"
+	  stdlib.cma std_exit.cmo *.cmi "$(INSTALL_LIBDIR)"
 	$(MKDIR) "$(INSTALL_STDLIB_META_DIR)"
 	$(INSTALL_DATA) META "$(INSTALL_STDLIB_META_DIR)"
 ifeq "$(INSTALL_SOURCE_ARTIFACTS)" "true"
@@ -122,10 +121,9 @@ endif
 TARGETHEADERPROGRAM = target_$(HEADERPROGRAM)
 
 # The shebang test in configure.ac will need updating if any runtime is
-# introduced with a suffix more than one character long (camlheader_ur doesn't
-# matter).
+# introduced with a suffix more than one character long.
 CAMLHEADERS =\
-  camlheader target_camlheader camlheader_ur \
+  camlheader target_camlheader \
   camlheaderd target_camlheaderd \
   camlheaderi target_camlheaderi
 
@@ -144,9 +142,6 @@ endif
 #      yet processed by configure)
 target_%: $(ROOTDIR)/Makefile.config Makefile
 	echo '#!$(TARGET_BINDIR)/ocamlrun$(subst camlheader,,$*)' > $@
-
-camlheader_ur: Makefile
-	echo '#!' | tr -d '\012' > $@
 
 else # Hashbang scripts not supported
 
@@ -172,9 +167,6 @@ $(HEADERPROGRAM)%$(O): \
 $(HEADERPROGRAM)%$(O): $(HEADERPROGRAM).c
 	$(CC) -c $(OC_CFLAGS) $(CFLAGS) $(OC_CPPFLAGS) $(CPPFLAGS) \
 	  $(OUTPUTOBJ)$@ $^
-
-camlheader_ur: camlheader
-	cp camlheader $@
 
 ifeq "$(UNIX_OR_WIN32)" "unix"
 tmptargetcamlheader%exe: $(TARGETHEADERPROGRAM)%$(O)
