@@ -90,6 +90,7 @@ config_main.ml: config.mlp $(ROOTDIR)/Makefile.config Makefile config.common.ml
 	    $(call SUBST,CC_HAS_DEBUG_PREFIX_MAP) \
 	    $(call SUBST,AS_HAS_DEBUG_PREFIX_MAP) \
 	    $(call SUBST,FORCE_INSTRUMENTED_RUNTIME) \
+	    $(call SUBST,SHEBANGSCRIPTS) \
 	    $< > $@
 	cat config.common.ml >> $@
 
