@@ -243,6 +243,11 @@ val force_instrumented_runtime: bool
 (** Force runtime-variant to be "i" at configure time
     when ocamlc or ocamlopt link executables. *)
 
+val use_shebang: bool
+(** Whether to use #! in headers for bytecode executables
+
+    @since 5.1.0 *)
+
 val afl_instrument : bool
 (** Whether afl-fuzz instrumentation is generated by default *)
 
