@@ -68,6 +68,7 @@ let with_flambda_invariants = %%WITH_FLAMBDA_INVARIANTS%%
 let with_cmm_invariants = %%WITH_CMM_INVARIANTS%%
 let windows_unicode = %%WINDOWS_UNICODE%% != 0
 let force_instrumented_runtime = %%FORCE_INSTRUMENTED_RUNTIME%%
+let use_shebang = %%SHEBANGSCRIPTS%%
 
 let flat_float_array = %%FLAT_FLOAT_ARRAY%%
 
